Fix index handling on insert in QQmlDelegateModel

QQmlListCompositor can manipulate the "before" index when inserting. In
particular it can extend an existing group. QQmlDelegateModel's cache,
however, always wants the original index.

Fixes: QTBUG-100161
Fixes: QTBUG-103203
Change-Id: I35c0a14ae45c9f66fdd079894dd0de2f80e2c781
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit e8ba9a3caa362f05657c4cb83893fe429ebaf4ab)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>